--- a/src/components/CommentItem/CommentItem.module.scss
+++ b/src/components/CommentItem/CommentItem.module.scss
@@ -44,8 +44,21 @@
 }
 
 .replyTo {
+  cursor: pointer;
   font-style: italic;
   margin-bottom: 8px;
+}
+
+.replyButton {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  margin-top: 8px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
 }
 
 .commentBody {
@@ -58,8 +71,9 @@
 
 .commentFooter {
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
 }
 
 .ratingButtons {
