--- a/src/containers/CommentPage/CommentPage.module.scss
+++ b/src/containers/CommentPage/CommentPage.module.scss
@@ -1,35 +1,31 @@
 @import "../../styles/variables";
 
 .commentPage {
-  padding: $padding-small;
-  background-color: $color-light;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
 }
 
-.newCommentContainer {
-  margin-bottom: $margin-medium;
+.newComment {
+  width: 70%;
 }
 
-.newCommentInput {
+.headerWrapper {
   width: 100%;
-  padding: $padding-small;
-  border: 1px solid $color-secondary;
-  border-radius: $border-radius-small;
-  font-size: $font-size-small;
+  background-color: #f9f9f9;
+  height: 96px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.commentList {
-  list-style-type: none;
-  padding: 0;
+.headerWrapper h1 {
+  font-family: "Cera Pro", sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  color: #000000;
   margin: 0;
-}
-
-.commentList li {
-  margin-bottom: $margin-medium;
-}
-
-@media (max-width: 600px) {
-  .newCommentInput {
-    font-size: $font-size-small;
-    padding: $padding-small;
-  }
+  padding: 24px 80px;
 }
