--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,6 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fff;
-  font-family: sans-serif;
+  font-family: "Cera Pro", sans-serif;
   font-size: 16px;
 }
